--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Control Stock - Buenos Aires</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="manifest" href='data:application/manifest+json,{"name":"Control Stock Buenos Aires","short_name":"Stock BA","start_url":"./","display":"standalone","background_color":"#111827","theme_color":"#111827"}'>
+    <link rel="manifest" href='data:application/manifest+json,{"name":"Control Stock Buenos Aires", ... "background_color":"%23111827","theme_color":"%23111827"}'>
     <meta name="theme-color" content="#111827">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
